--- a/src/main/resources/agentswindow.fxml
+++ b/src/main/resources/agentswindow.fxml
@@ -1,64 +1,73 @@
 <?import javafx.scene.layout.VBox?>
-<?import com.github.ericytsang.research2016.announcementresolver.AgentsTableView?>
+<?import com.github.ericytsang.research2016.announcementresolver.guicomponent.AgentsTableView?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.geometry.Insets?>
-<?import com.github.ericytsang.research2016.announcementresolver.DisplayModeComboBox?>
+<?import com.github.ericytsang.research2016.announcementresolver.guicomponent.DisplayModeComboBox?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
-
+<?import javafx.scene.control.CheckMenuItem?>
 <VBox
-        xmlns:fx="http://javafx.com/fxml"
-        fx:id="rootLayout"
-        fx:controller="com.github.ericytsang.research2016.announcementresolver.AgentsWindow">
+    xmlns:fx="http://javafx.com/fxml"
+    fx:id="rootLayout"
+    fx:controller="com.github.ericytsang.research2016.announcementresolver.AgentsWindowController"
+    prefWidth="700.0"
+    prefHeight="400.0">
     <children>
         <MenuBar>
             <Menu
-                    text="File">
+                text="File">
                 <MenuItem
-                        text="Save"
-                        onAction="#saveToFile"/>
+                    text="Save"
+                    onAction="#saveToFile"/>
                 <MenuItem
-                        text="Load"
-                        onAction="#loadFromFile"/>
+                    text="Load"
+                    onAction="#loadFromFile"/>
+            </Menu>
+            <Menu
+                text="Window">
+                <CheckMenuItem
+                    fx:id="toggleDictionaryWindowCheckMenuItem"
+                    text="Behavioural Dictionary"
+                    onAction="#toggleDictionaryWindow"/>
             </Menu>
         </MenuBar>
         <VBox
-                VBox.vgrow="ALWAYS"
-                spacing="8.0">
+            VBox.vgrow="ALWAYS"
+            spacing="8.0">
             <padding>
                 <Insets
-                        top="8.0"
-                        left="8.0"
-                        bottom="8.0"
-                        right="8.0"/>
+                    top="8.0"
+                    left="8.0"
+                    bottom="8.0"
+                    right="8.0"/>
             </padding>
             <children>
                 <AgentsTableView
-                        fx:id="agentsTableView"
-                        VBox.vgrow="ALWAYS"/>
+                    fx:id="agentsTableView"
+                    VBox.vgrow="ALWAYS"/>
                 <DisplayModeComboBox
-                        fx:id="displayModeComboBox"
-                        onAction="#onDisplayModeChanged"/>
+                    fx:id="displayModeComboBox"
+                    onAction="#onDisplayModeChanged"/>
                 <HBox
-                        spacing="8.0">
+                    spacing="8.0">
                     <Label
-                            fx:id="announcementLabel"
-                            HBox.hgrow="ALWAYS"
-                            maxWidth="Infinity"/>
+                        fx:id="announcementLabel"
+                        HBox.hgrow="ALWAYS"
+                        maxWidth="Infinity"/>
                     <Button
-                            fx:id="cancelButton"
-                            text="Cancel"
-                            onAction="#cancelAnnouncementFinding"/>
+                        fx:id="cancelButton"
+                        text="Cancel"
+                        onAction="#cancelAnnouncementFinding"/>
                     <Button
-                            fx:id="findAnnouncementButton"
-                            text="Find announcement"
-                            onAction="#beginAnnouncementFinding"/>
+                        fx:id="findAnnouncementButton"
+                        text="Find announcement"
+                        onAction="#beginAnnouncementFinding"/>
                     <Button
-                            text="Commit"
-                            onAction="#commitAnnouncement"/>
+                        text="Commit"
+                        onAction="#commitAnnouncement"/>
                 </HBox>
             </children>
         </VBox>
