abstracted the simulation framework stuff out into another project
Signed-off-by: Eric Tsang <surplus.et@gmail.com>

--- a/src/main/resources/agentswindow.fxml
+++ b/src/main/resources/agentswindow.fxml
@@ -36,6 +36,10 @@
                     fx:id="toggleObstacleWindowCheckMenuItem"
                     text="Obstacles"
                     onAction="#toggleObstacleWindow"/>
+                <CheckMenuItem
+                    fx:id="toggleSimulationWindowCheckMenuItem"
+                    text="Simulation"
+                    onAction="#toggleSimulationWindow"/>
             </Menu>
         </MenuBar>
         <VBox
