--- a/src/main/resources/obstaclewindow.fxml
+++ b/src/main/resources/obstaclewindow.fxml
@@ -19,6 +19,7 @@
             right="8.0"/>
     </padding>
     <ObstacleTableView
-        fx:id="obstacleTableView"/>
+        fx:id="obstacleTableView"
+        VBox.vgrow="ALWAYS"/>
 </VBox>
 
