--- a/src/main/resources/agentswindow.fxml
+++ b/src/main/resources/agentswindow.fxml
@@ -14,69 +14,74 @@
     fx:controller="com.github.ericytsang.research2016.announcementresolver.window.AgentsWindowController"
     prefWidth="700.0"
     prefHeight="400.0">
-    <children>
-        <MenuBar>
-            <Menu
-                text="File">
-                <MenuItem
-                    text="Save"
-                    onAction="#saveToFile"/>
-                <MenuItem
-                    text="Load"
-                    onAction="#loadFromFile"/>
-            </Menu>
-            <Menu
-                text="Window">
-                <CheckMenuItem
-                    fx:id="toggleDictionaryWindowCheckMenuItem"
-                    text="Behavioural Dictionary"
-                    onAction="#toggleDictionaryWindow"/>
-                <CheckMenuItem
-                    fx:id="toggleObstacleWindowCheckMenuItem"
-                    text="Obstacles"
-                    onAction="#toggleObstacleWindow"/>
-                <CheckMenuItem
-                    fx:id="toggleSimulationWindowCheckMenuItem"
-                    text="Simulation"
-                    onAction="#toggleSimulationWindow"/>
-            </Menu>
-        </MenuBar>
-        <VBox
-            VBox.vgrow="ALWAYS"
+    <MenuBar>
+        <Menu
+            text="File">
+            <MenuItem
+                text="Save"
+                onAction="#saveToFile"/>
+            <MenuItem
+                text="Load"
+                onAction="#loadFromFile"/>
+            <MenuItem
+                text="Close"
+                onAction="#closeWindow"/>
+        </Menu>
+        <Menu
+            text="Window">
+            <CheckMenuItem
+                fx:id="toggleDictionaryWindowCheckMenuItem"
+                text="Behavioural Dictionary"
+                onAction="#toggleDictionaryWindow"/>
+            <CheckMenuItem
+                fx:id="toggleObstacleWindowCheckMenuItem"
+                text="Obstacles"
+                onAction="#toggleObstacleWindow"/>
+            <CheckMenuItem
+                fx:id="toggleSimulationWindowCheckMenuItem"
+                text="Simulation"
+                onAction="#toggleSimulationWindow"/>
+        </Menu>
+        <Menu
+            text="Help">
+            <MenuItem
+                text="About"
+                onAction="#showHelpDialog"/>
+        </Menu>
+    </MenuBar>
+    <VBox
+        VBox.vgrow="ALWAYS"
+        spacing="8.0">
+        <padding>
+            <Insets
+                top="8.0"
+                left="8.0"
+                bottom="8.0"
+                right="8.0"/>
+        </padding>
+        <AgentsTableView
+            fx:id="agentsTableView"
+            VBox.vgrow="ALWAYS"/>
+        <DisplayModeComboBox
+            fx:id="displayModeComboBox"
+            onAction="#onDisplayModeChanged"/>
+        <HBox
             spacing="8.0">
-            <padding>
-                <Insets
-                    top="8.0"
-                    left="8.0"
-                    bottom="8.0"
-                    right="8.0"/>
-            </padding>
-            <children>
-                <AgentsTableView
-                    fx:id="agentsTableView"
-                    VBox.vgrow="ALWAYS"/>
-                <DisplayModeComboBox
-                    fx:id="displayModeComboBox"
-                    onAction="#onDisplayModeChanged"/>
-                <HBox
-                    spacing="8.0">
-                    <Label
-                        fx:id="announcementLabel"
-                        HBox.hgrow="ALWAYS"
-                        maxWidth="Infinity"/>
-                    <Button
-                        fx:id="cancelButton"
-                        text="Cancel"
-                        onAction="#cancelAnnouncementFinding"/>
-                    <Button
-                        fx:id="findAnnouncementButton"
-                        text="Find announcement"
-                        onAction="#beginAnnouncementFinding"/>
-                    <Button
-                        text="Commit"
-                        onAction="#commitAnnouncement"/>
-                </HBox>
-            </children>
-        </VBox>
-    </children>
+            <Label
+                fx:id="announcementLabel"
+                HBox.hgrow="ALWAYS"
+                maxWidth="Infinity"/>
+            <Button
+                fx:id="cancelButton"
+                text="Cancel"
+                onAction="#cancelAnnouncementFinding"/>
+            <Button
+                fx:id="findAnnouncementButton"
+                text="Find announcement"
+                onAction="#beginAnnouncementFinding"/>
+            <Button
+                text="Commit"
+                onAction="#commitAnnouncement"/>
+        </HBox>
+    </VBox>
 </VBox>
