--- a/src/main/resources/simulatorwindow.fxml
+++ b/src/main/resources/simulatorwindow.fxml
@@ -1,12 +1,29 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuItem?>
 <VBox
     xmlns:fx="http://javafx.com/fxml"
     fx:id="parentLayout"
     fx:controller="com.github.ericytsang.research2016.announcementresolver.window.SimulatorWindowController"
     prefWidth="600.0"
     prefHeight="600.0">
+    <MenuBar>
+        <Menu
+            text="File">
+            <MenuItem
+                text="Close"
+                onAction="#closeWindow"/>
+        </Menu>
+        <Menu
+            text="Help">
+            <MenuItem
+                text="About"
+                onAction="#showHelpDialog"/>
+        </Menu>
+    </MenuBar>
     <ScrollPane
         pannable="true"
         hvalue="0.5"
