removed the help menu because it was not implemented..and added a color column for the agents table
Signed-off-by: Eric Tsang <surplus.et@gmail.com>

--- a/src/main/resources/behavioraldictionarywindow.fxml
+++ b/src/main/resources/behavioraldictionarywindow.fxml
@@ -22,12 +22,12 @@
                 text="Close"
                 onAction="#closeWindow"/>
         </Menu>
-        <Menu
+        <!--<Menu
             text="Help">
             <MenuItem
                 text="About"
                 onAction="#showHelpDialog"/>
-        </Menu>
+        </Menu>-->
     </MenuBar>
     <VBox
         VBox.vgrow="ALWAYS"
@@ -45,6 +45,7 @@
                 right="8.0"/>
         </padding>
         <BehavioralDictionaryTableView
-            fx:id="behaviouralDictionaryTableView"/>
+            fx:id="behaviouralDictionaryTableView"
+            VBox.vgrow="ALWAYS"/>
     </VBox>
 </VBox>
