--- a/src/main/resources/simulatorwindow.fxml
+++ b/src/main/resources/simulatorwindow.fxml
@@ -17,12 +17,12 @@
                 text="Close"
                 onAction="#closeWindow"/>
         </Menu>
-        <Menu
+        <!--<Menu
             text="Help">
             <MenuItem
                 text="About"
                 onAction="#showHelpDialog"/>
-        </Menu>
+        </Menu>-->
     </MenuBar>
     <ScrollPane
         pannable="true"
