--- a/src/main/resources/agentswindow.fxml
+++ b/src/main/resources/agentswindow.fxml
@@ -42,12 +42,12 @@
                 text="Simulation"
                 onAction="#toggleSimulationWindow"/>
         </Menu>
-        <Menu
+        <!--<Menu
             text="Help">
             <MenuItem
                 text="About"
                 onAction="#showHelpDialog"/>
-        </Menu>
+        </Menu>-->
     </MenuBar>
     <VBox
         VBox.vgrow="ALWAYS"
