renamed everything 'behavioural dictionary' to 'definitions'
Signed-off-by: Eric Tsang <surplus.et@gmail.com>

--- a/src/main/resources/agentswindow.fxml
+++ b/src/main/resources/agentswindow.fxml
@@ -31,7 +31,7 @@
             text="Window">
             <CheckMenuItem
                 fx:id="toggleDictionaryWindowCheckMenuItem"
-                text="Behavioural Dictionary"
+                text="Definitions"
                 onAction="#toggleDictionaryWindow"/>
             <CheckMenuItem
                 fx:id="toggleObstacleWindowCheckMenuItem"
